--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -60,8 +60,14 @@
     <mat-checkbox ngModel name="agree" required color="primary"
       >Agree to Terms & Conditions.</mat-checkbox
     >
-    <button mat-raised-button color="primary" [disabled]="f.invalid">
+    <button
+      *ngIf="!isLoading"
+      mat-raised-button
+      color="primary"
+      [disabled]="f.invalid"
+    >
       Submit
     </button>
+    <mat-spinner *ngIf="isLoading"></mat-spinner>
   </form>
 </section>
