--- a/src/app/training/past-training/past-training.component.html
+++ b/src/app/training/past-training/past-training.component.html
@@ -46,5 +46,5 @@
   <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
 </mat-table>
 
-<mat-paginator [pageSize]="1" [pageSizeOptions]="[1, 5,10,20]">
+<mat-paginator [pageSize]="10" [pageSizeOptions]="[1, 5, 10, 20]">
 </mat-paginator>
