--- a/src/app/nav/header/header.component.html
+++ b/src/app/nav/header/header.component.html
@@ -4,14 +4,14 @@
       <mat-icon>menu</mat-icon>
     </button>
   </div>
-  <div><a routerLink="/">LOGO</a></div>
+  <div><a routerLink="/">ngFit</a></div>
   <div fxFlex fxLayout fxLayoutAlign="flex-end" fxHide.xs>
     <ul fxLayout fxLayoutGap="15px" class="nav-items">
       <li *ngIf="!isAuth"><a routerLink="/signup">Sign Up</a></li>
       <li *ngIf="!isAuth"><a routerLink="/signin">Sign In</a></li>
       <li *ngIf="isAuth"><a routerLink="/training">Training</a></li>
       <li *ngIf="isAuth">
-        <a routerLink="/logout" (click)="onLogout()">Logout</a>
+        <a routerLink="" (click)="onLogout()">Logout</a>
       </li>
     </ul>
   </div>
