--- a/src/app/training/new-training/new-training.component.html
+++ b/src/app/training/new-training/new-training.component.html
@@ -8,7 +8,7 @@
         <mat-form-field>
           <mat-label>Workout</mat-label>
           <mat-select ngModel name="exercise" required>
-            <mat-option *ngFor="let ex of exercises | async" [value]="ex.name">
+            <mat-option *ngFor="let ex of exercises" [value]="ex.id">
               {{ ex.name }}
             </mat-option>
           </mat-select>
